# mathgl_export_fix

./: CMakeLists.txt  ChangeLog  ChangeLog.txt  FindMathGL2.cmake  INSTALL  Makefile.am  MathGL2.cbp  MathGL2.cbp.save  MathGL2.depend  MathGL2.layout  MathGL2.layout.save  NEWS  README  README_V2  TODO  ads.txt  bootstrap  brush.ods  clean-svn  cmake-qt4.txt  cmake-qt5.txt  configure  configure.ac  emblem.mgl  make_release  mathgl-2x.cbp  mathgl_en.po  mathgl_es.po  mathgl_ru.po  sample.csv  setup.py  test.cpp  test.mgl  todo.txt
addons/getopt/: CMakeLists.txt  getopt.c
config/: autotroll.m4
examples/: CMakeLists.txt  Makefile.am  fltk_example.cpp  full_test.cpp  glut_example.cpp  mpi_test.cpp  pthread_sample.cpp  qgl_example.cpp  qt_example.cpp  samples.cpp  wnd_samples.cpp  wx_example.cpp
fonts/: CMakeLists.txt  make_bin.cpp
include/: CMakeLists.txt  Makefile.am  config.h.in
include/mgl/: addon.h  base.h  base_cf.h  canvas.h  canvas_cf.h  canvas_gl.h  canvas_wnd.h  config.h.in  cont.h  data.h  data_cf.h  define.h  eval.h  evalc.h  fit.h  fltk.h  font.h  glut.h  mathgl.h  mathgl_cf.h  mgl.h  mgl_c.h  mgl_cf.h  mgl_f.h  mgl_fltk.h  mgl_qt.h  mgl_txt.h  opengl.h  other.h  parser.h  plot.h  prim.h  qt.h  surf.h  text.h  type.h  vect.h  volume.h  window.h
include/mgl2/: Fl_MathGL.h  abstract.h  addon.h  base.h  base_cf.h  canvas.h  canvas_cf.h  canvas_wnd.h  cont.h  data.h  data_cf.h  data_ext.h  datac.h  datac_cf.h  define.h  dllexport.h  eval.h  evalc.h  fit.h  fltk.h  font.h  glut.h  mgl.h  mgl_cf.h  mgl_pas.pas  mpi.h  opengl.h  other.h  parser.h  parser_old.h  pde.h  plot.h  prim.h  qmathgl.h  qt.h  surf.h  thread.h  type.h  vect.h  volume.h  (+4 more)
include/xpm/: arc.xpm  polygon.xpm
json/: Backend.cpp  Backend.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MglForJsTestBench.pro  index.html  main.cpp  main.js  mathgl.Graph.js  mathgl.View.js  mathgl.WebkitBackend.js
lang/: CMakeLists.txt  DESCRIPTION  Makefile.am  data.i  install-path.m.in  install.m  install.m.in  mathgl.i  mgl.i  mgl.i.in  setup.py.in
mgllab/: CMakeLists.txt  Makefile.am  animate.cpp  data.cpp  dialogs.cpp  editor.cpp  fltk_test.fl  grid.cpp  help.cpp  image.cpp  image.h  main.cpp  main_wnd.cpp  main_wnd.h  mathgl.cpp  mgllab.cpp  mgllab.h  option.cpp  setup.cpp  show_hint.cpp  strings_ru.po  table.cpp  todo.txt  udav.h  write.cpp
mgltex/: CMakeLists.txt  Recompilation_decision.eps  Test.tex  mgltex.dtx  mgltex.ins  mgltex.sty  mgltex.tex  sample.tex
qt4/: CMakeLists.txt
qt4/wnd/: CMakeLists.txt
qt5/: CMakeLists.txt
qt5/wnd/: CMakeLists.txt
scripts/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.am  addon.cpp  axis.cpp  base.cpp  base_cf.cpp  canvas.cpp  canvas_cf.cpp  complex.cpp  complex_ex.cpp  complex_io.cpp  complex_new.cpp  cont.cpp  cont.hpp  crust.cpp  data.cpp  data_ex.cpp  data_gr.cpp  data_io.cpp  data_new.cpp  data_op.cpp  data_png.cpp  def_font.cc  def_font.cpp  eps_svg.cpp  eval.cpp  evalc.cpp  evalp.cpp  evalp_old.cpp  exec.cpp  exec_dat.cpp  exec_gr.cpp  exec_prm.cpp  exec_set.cpp  export.cpp  export_2d.cpp  export_3d.cpp  fft.cpp  fit.cpp  font.cpp  (+24 more)
src/prc/: PRCbitStream.cc  oPRCFile.cc  oPRCFile.h  writePRC.cc  writePRC.h
src/s_hull/: COPYING.txt  s_hull.C  s_hull.h  s_hull_pro.cpp  s_hull_pro.h
texinfo/: CMakeLists.txt  Makefile.am  appendix_en.texi  appendix_ru.texi  class_en.texi  class_ru.texi  classes.odg  concept_en.texi  concept_ru.texi  core_en.texi  core_ru.texi  data_en.texi  data_ru.texi  doc_en.texi  doc_ru.texi  ex_mgl_en.texi  ex_mgl_ru.texi  example_en.texi  example_ru.texi  formats_en.texi  formats_ru.texi  index.html  json.html  mathgl.js  mathgl_en.texi  mathgl_ru.texi  mgl_cmd_en.texi  mgl_cmd_ru.texi  mgl_en.texi  mgl_ru.texi  mglview.1  other_en.texi  other_ru.texi  overview_en.texi  overview_ru.texi  parse_en.texi  parse_ru.texi  samples_en.texi  samples_ru.texi  symbols_en.texi  (+17 more)
texinfo/png/: Makefile.am
translations/: mathgl_es.mo  mathgl_ru.mo
udav/: CMakeLists.txt  UDAV.desktop  anim_dlg.cpp  anim_dlg.h  args_dlg.cpp  calc_dlg.cpp  dat_pnl.cpp  dat_pnl.h  data_dlg.cpp  files_dlg.h  find_dlg.cpp  find_dlg.h  help_pnl.cpp  help_pnl.h  hint_dlg.cpp  hint_dlg.h  info_dlg.cpp  info_dlg.h  main.cpp  mem_pnl.cpp  mem_pnl.h  newcmd_dlg.cpp  newcmd_dlg.h  open_dlg.cpp  opt_dlg.cpp  opt_dlg.h  plot_pnl.cpp  plot_pnl.h  prop_dlg.cpp  prop_dlg.h  qmglcanvas.cpp  qmglcanvas.h  qmglsyntax.cpp  setup_dlg.cpp  setup_dlg.h  src.pro  style_dlg.cpp  style_dlg.h  subplot_dlg.cpp  subplot_dlg.h  (+7 more)
utils/: CMakeLists.txt  Makefile.am  make_bin.cpp  make_forth.cpp  make_pas.cpp  mgl2cpp.cpp  mgl2eps.cpp  mgl2gif.cpp  mgl2png.cpp  mgl2svg.cpp  mgl_test.html  mglcgi.cpp  mglconv.cpp  mgltask.cpp  mglview.cpp
website/: index.html  mathgl_en.html  mathgl_ru.html  prepare_doc.sh  update_doc.sh
widget/: Makefile.am  fltk.cpp  qt.cpp  window.cpp
widgets/: CMakeLists.txt  Makefile.am  fltk.cpp  glut.cpp  image.cpp  image.h  qt.cpp  strings_ru.po  window.cpp  wx.cpp
widgets/qt4/: CMakeLists.txt
widgets/qt5/: CMakeLists.txt
win32-install-deps/: CMakeLists.txt  install-deps.txt
